src/test/deca/syntax/valid/test_synt/class_sans_method/classic_declaration_class.deca
// Description:
//    Test de déclaration de class
//
// Resultats:
//    Lexeur: pas d'erreur
//    Parseur: pas d'erreur
//
// Historique:
//    cree le 11/01/2022

{
    public class coordonnees{
        private int x;
        private int y;
    }
}