src/test/deca/syntax/invalid/test_synt/class_sans_method/class_declaration_with_private_attributes.deca
// Description:
//    Test de déclaration d'attributs privés
//
// Resultats:
//    Lexeur: pas d'erreur
//    Parseur: pas d'erreur
//
// Historique:
//    cree le 11/01/2022

class coordonnees{
     private int x;
     private int y;
}